--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd08-Canadian-Grand-Prix-Qualifying_laptime.csv">QF:All
 Laptime CSV</a></p>
+<p><a href="./2023/2023-Rd08-Canadian-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2023/2023-Rd08-Canadian-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a
+href="./2023/2023-Rd08-Canadian-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2023/2023-Rd08-Canadian-Grand-Prix-Race_rcm.csv">R: Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd07-spanish-grand-prix"><span
 class="header-section-number">1.2</span> Rd07 Spanish Grand Prix</h2>
 <p><a
