--- a/index.html
+++ b/index.html
@@ -115,6 +115,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd09-Austrian-Grand-Prix-Qualifying_laptime.csv">QF:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd09-Austrian-Grand-Prix-Sprint-Shootout.pdf">SS:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd09-Austrian-Grand-Prix-Sprint-Shootout_rcm.csv">SS:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd09-Austrian-Grand-Prix-Sprint-Shootout_laptime.csv">SS:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd08-canadian-grand-prix"><span
 class="header-section-number">1.2</span> Rd08 Canadian Grand Prix</h2>
 <p><a
