--- a/index.html
+++ b/index.html
@@ -133,6 +133,15 @@ href="./2023/2023-Rd09-Austrian-Grand-Prix-Sprint_gaptime.csv">S:GapTime
 CSV </a><br />
 <a href="./2023/2023-Rd09-Austrian-Grand-Prix-Sprint_rcm.csv">S: Race
 Control Message CSV</a></p>
+<p><a href="./2023/2023-Rd09-Austrian-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2023/2023-Rd09-Austrian-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a
+href="./2023/2023-Rd09-Austrian-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2023/2023-Rd09-Austrian-Grand-Prix-Race_rcm.csv">R: Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd08-canadian-grand-prix"><span
 class="header-section-number">1.2</span> Rd08 Canadian Grand Prix</h2>
 <p><a
