--- a/index.html
+++ b/index.html
@@ -122,6 +122,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd12-Belgian-Grand-Prix-Qualifying_laptime.csv">QF:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd12-Belgian-Grand-Prix-Sprint-Shootout.pdf">SS:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd12-Belgian-Grand-Prix-Sprint-Shootout_rcm.csv">SS:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd12-Belgian-Grand-Prix-Sprint-Shootout_laptime.csv">SS:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd11-hungarian-grand-prix"><span
 class="header-section-number">1.2</span> Rd11 Hungarian Grand Prix</h2>
 <p><a
