--- a/index.html
+++ b/index.html
@@ -140,6 +140,14 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd13-Dutch-Grand-Prix-Qualifying_laptime.csv">QF:All
 Laptime CSV</a></p>
+<p><a href="./2023/2023-Rd13-Dutch-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2023/2023-Rd13-Dutch-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2023/2023-Rd13-Dutch-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2023/2023-Rd13-Dutch-Grand-Prix-Race_rcm.csv">R: Race Control
+Message CSV</a></p>
 <h2 data-number="1.2" id="rd12-belgian-grand-prix"><span
 class="header-section-number">1.2</span> Rd12 Belgian Grand Prix</h2>
 <p><a
