--- a/index.html
+++ b/index.html
@@ -124,6 +124,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd14-Italian-Grand-Prix-Practice-1_laptime.csv">FP1:All
 Laptime CSV</a></p>
+<p><a
+href="./2023/2023-Rd14-Italian-Grand-Prix-Practice-2.pdf">FP2:Plots
+PDF</a><br />
+<a
+href="./2023/2023-Rd14-Italian-Grand-Prix-Practice-2_rcm.csv">FP2:Race
+Control Message CSV</a><br />
+<a
+href="./2023/2023-Rd14-Italian-Grand-Prix-Practice-2_laptime.csv">FP2:All
+Laptime CSV</a></p>
 <h2 data-number="1.2" id="rd13-dutch-grand-prix"><span
 class="header-section-number">1.2</span> Rd13 Dutch Grand Prix</h2>
 <p><a href="./2023/2023-Rd13-Dutch-Grand-Prix-Practice-1.pdf">FP1:Plots
