--- a/index.html
+++ b/index.html
@@ -149,6 +149,14 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd14-Italian-Grand-Prix-Qualifying_laptime.csv">QF:All
 Laptime CSV</a></p>
+<p><a href="./2023/2023-Rd14-Italian-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2023/2023-Rd14-Italian-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2023/2023-Rd14-Italian-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2023/2023-Rd14-Italian-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd13-dutch-grand-prix"><span
 class="header-section-number">1.2</span> Rd13 Dutch Grand Prix</h2>
 <p><a href="./2023/2023-Rd13-Dutch-Grand-Prix-Practice-1.pdf">FP1:Plots
