--- a/index.html
+++ b/index.html
@@ -157,6 +157,15 @@ Control Message CSV</a><br />
 <a
 href="./2023/2023-Rd16-Japanese-Grand-Prix-Qualifying_laptime.csv">QF:All
 Laptime CSV</a></p>
+<p><a href="./2023/2023-Rd16-Japanese-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2023/2023-Rd16-Japanese-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a
+href="./2023/2023-Rd16-Japanese-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2023/2023-Rd16-Japanese-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="rd15-singapore-grand-prix"><span
 class="header-section-number">1.2</span> Rd15 Singapore Grand Prix</h2>
 <p><a
