--- a/index.html
+++ b/index.html
@@ -151,6 +151,12 @@ PDF</a><br />
 csv</a><br />
 <a href="./2024/2024-Pre-Season-Testing-1-1_rcm.csv">Day1: race control
 message csv</a></p>
+<p><a href="./2024/2024-Pre-Season-Testing-1-2.pdf">Day2: Plot
+PDF</a><br />
+<a href="./2024/2024-Pre-Season-Testing-1-2_laptime.csv">Day2: laptime
+csv</a><br />
+<a href="./2024/2024-Pre-Season-Testing-1-2_rcm.csv">Day2: race control
+message csv</a></p>
 <h1 data-number="2" id="season-1"><span
 class="header-section-number">2</span> 2023 season</h1>
 <h2 data-number="2.1" id="rd22-abu-dhabi-grand-prix"><span
