--- a/index.html
+++ b/index.html
@@ -153,8 +153,15 @@ Plot PDF</a><br />
 <a
 href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-1_laptime.csv">FP1:
 laptime csv</a><br />
-<a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-1_rcm.csv">Day1:
-race FP1 message csv</a></p>
+<a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-1_rcm.csv">FP1:
+race control message csv</a></p>
+<p><a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-2.pdf">FP2:
+Plot PDF</a><br />
+<a
+href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-2_laptime.csv">FP2:
+laptime csv</a><br />
+<a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-2_rcm.csv">FP2:
+race control message csv</a></p>
 <h2 data-number="1.2" id="pre-season-test"><span
 class="header-section-number">1.2</span> Pre-season test</h2>
 <p><a href="./2024/2024-Pre-Season-Testing-1-1.pdf">Day1: Plot
