--- a/index.html
+++ b/index.html
@@ -169,6 +169,12 @@ href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-3_laptime.csv">FP3:
 laptime csv</a><br />
 <a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Practice-3_rcm.csv">FP3:
 race control message csv</a></p>
+<p><a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Qualifying.pdf">QF: Plot
+PDF</a><br />
+<a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Qualifying_laptime.csv">QF:
+laptime csv</a><br />
+<a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Qualifying_rcm.csv">FP3:
+race QFtrol message csv</a></p>
 <h2 data-number="1.2" id="pre-season-test"><span
 class="header-section-number">1.2</span> Pre-season test</h2>
 <p><a href="./2024/2024-Pre-Season-Testing-1-1.pdf">Day1: Plot
