--- a/index.html
+++ b/index.html
@@ -173,8 +173,16 @@ race control message csv</a></p>
 PDF</a><br />
 <a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Qualifying_laptime.csv">QF:
 laptime csv</a><br />
-<a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Qualifying_rcm.csv">FP3:
-race QFtrol message csv</a></p>
+<a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Qualifying_rcm.csv">QF:
+race control message csv</a></p>
+<p><a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2024/2024-Rd01-Bahrain-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a></p>
 <h2 data-number="1.2" id="pre-season-test"><span
 class="header-section-number">1.2</span> Pre-season test</h2>
 <p><a href="./2024/2024-Pre-Season-Testing-1-1.pdf">Day1: Plot
